<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/resulttEdit"
            android:layout_width="match_parent"
            android:layout_height="159dp"
            android:textSize="60sp"
            tools:layout_editor_absoluteX="-4dp"
            tools:layout_editor_absoluteY="4dp" />
        <LinearLayout
            android:id="@+id/ButtonRaw01"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">


            <Button
                android:id="@+id/button01"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btn01Click"
                android:text="@string/button_01"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button02"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btn02Click"
                android:text="@string/button_02"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button03"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btn03Click"
                android:text="@string/button_03"
                android:textSize="50sp" />

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btnAddClick"
                android:text="@string/button_Add"
                android:textSize="50sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ButtonRaw02"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">


            <Button
                android:id="@+id/button04"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btn04Click"
                android:text="@string/button_04"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button05"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btn05Click"
                android:text="@string/button_05"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button06"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btn06Click"
                android:text="@string/button_06"
                android:textSize="50sp" />

            <Button
                android:id="@+id/buttonMi"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btnMinusClick"
                android:text="@string/button_Min"
                android:textSize="50sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ButtonRaw03"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button07"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btn07Click"
                android:text="@string/button_07"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button08"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btn08Click"
                android:text="@string/button_08"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btn09Click"
                android:text="@string/button_09"
                android:textSize="50sp" />

            <Button
                android:id="@+id/buttonDivide"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btnDivideClick"
                android:text="@string/button_divider"
                android:textSize="50sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ButtonRaw04"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonClear"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btnClearClick"
                android:text="@string/button_Clear"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button00"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btn00Click"
                android:text="@string/button_00"
                android:textSize="50sp" />

            <Button
                android:id="@+id/buttonDot"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btnDotClick"
                android:text="@string/button_Dot"
                android:textSize="50sp" />

            <Button
                android:id="@+id/buttonMulti"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btnMultiplyClick"
                android:text="@string/button_Multi"
                android:textSize="50sp" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/EQbutton"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonEQ"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:onClick="btnResultClick"
                android:text="@string/button_EQ"
                android:textSize="50sp" />

    </LinearLayout>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>